2010-03-30  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: get rid of "Unsafe JavaScript attempt..." message when inspecting frames whose content has changed.

        https://bugs.webkit.org/show_bug.cgi?id=36828

        * http/tests/inspector-enabled/console-log-before-frame-navigation-expected.txt:
        * http/tests/inspector-enabled/resources/console-log-frame-before-navigation.html:

2010-03-31  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Add missing pixel test results for svg/filters/feColorMatrix-values.svg

        * platform/mac/svg/filters/feColorMatrix-values-expected.checksum: Added.
        * platform/mac/svg/filters/feColorMatrix-values-expected.png: Added.

2010-03-31  Zhenyao Mo  <zmo@google.com>

        Reviewed by Darin Fisher.

        Implement memmove behavior for WebGLArray set()
        https://bugs.webkit.org/show_bug.cgi?id=35619

        * fast/canvas/webgl/array-setters-expected.txt: Testing shared overlapping buffer set() behaviors.
        * fast/canvas/webgl/array-setters.html: Ditto.

2010-03-31  Sterling Swigart  <sswigart@google.com>

        Reviewed by David Levin.

        [chromium] test_expectations.txt swept for MAC test cases becoming PASS
        https://bugs.webkit.org/show_bug.cgi?id=36863

        * platform/chromium/test_expectations.txt: Cleaned up test_expectations.txt
        for MAC which are now PASS.

2010-03-31  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Darin Adler.

        [Qt] Remove LayoutTests/fast/canvas/image-object-in-canvas.html from Skipped
        https://bugs.webkit.org/show_bug.cgi?id=36836

        Enable LayoutTests/fast/canvas/image-object-in-canvas.html at LayoutTests

        * platform/qt/Skipped:
        * platform/qt/fast/canvas/image-object-in-canvas-expected.checksum: Added.
        * platform/qt/fast/canvas/image-object-in-canvas-expected.png: Added.